# artist-intelligence

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DATA_SOURCES.md  DESIGN.md  DOMAIN.md  HANDOFF.md  PRODUCT.md  README.md  WORKFLOW.md
modules/chart-history/: RULES.md  SPEC.md  TESTS.md  pyproject.toml
modules/chart-history/output/: report.json
modules/chart-history/src/chart_history/: __init__.py  __main__.py  cli.py  entities.py  normalize.py  parse.py  report.py
modules/chart-history/tests/fixtures/: kworb_apple_kr.html  kworb_spotify_global_daily.html  kworb_spotify_jp_daily.html  kworb_spotify_kr_daily.html  kworb_spotify_kr_weekly.html  kworb_spotify_us_daily.html
modules/chart-history/tests/fixtures/geo/: ae.html  ar.html  at.html  au.html  be.html  bg.html  bo.html  br.html  by.html  ca.html  ch.html  cl.html  co.html  cr.html  cy.html  cz.html  de.html  dk.html  do.html  ec.html  ee.html  eg.html  es.html  fi.html  fr.html  gb.html  global.html  gr.html  gt.html  hk.html  hn.html  hu.html  id.html  ie.html  il.html  in.html  is.html  it.html  jp.html  kr.html  (+36 more)
modules/chart-history/tests/fixtures/melon/: mcp_page_sample.txt
modules/chart-history/tests/fixtures/multiplatform/apple/kr/: 2026-07-19.html
modules/fandom-pulse/: RULES.md  SPEC.md  TESTS.md  pyproject.toml
modules/fandom-pulse/output/: report.json
modules/fandom-pulse/src/fandom_pulse/: __init__.py  __main__.py  apify.py  cli.py  entities.py  normalize.py  report.py
modules/fandom-pulse/tests/fixtures/: empty.json  ig_hashtag_kpopdance.json
(+82 files in other folders)
