[project]
name = "chart-history"
version = "0.1.0"
description = "Kworb chart-history collector → schema-valid report.json (artist-intelligence)"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4"]

[project.scripts]
chart-history = "chart_history.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chart_history"]
