[project]
name = "fandom-pulse"
version = "0.1.0"
description = "Public IG hashtag pulse → facts-only signal report.json (artist-intelligence)"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4"]

[project.scripts]
fandom-pulse = "fandom_pulse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fandom_pulse"]
